--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <title>web</title>
+  <title>小_飞鸡</title>
+  <link rel="shortcut icon" id="self_icon" href="/static/img/xiao_feiji.ico" >
 </head>
 <body style="height: 100%;">
 <div id="app" style="height: 100%;"></div>
